cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_library_command_case_21@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    Album {
        id: RecordId {
            tb: "album",
            id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
        },
        title: "Test Album",
        artists: [
            "Test Artist",
        ],
        release: Some(
            2021,
        ),
        runtime: Duration {
            seconds: 180,
            nanos: 0,
        },
        song_count: 1,
        discs: 1,
        genres: [
            "Test Genre",
        ],
    },
)
